objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalWorkOrderNumber__c</fullName>
        <description>Work Order identifier from an external system.</description>
        <externalId>true</externalId>
        <label>External Work Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResolutionComments__c</fullName>
        <description>Comments recorded by technician about resolution of the problem</description>
        <label>Resolution Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Point identifier where work is to be performed</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>WorkOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceReason__c</fullName>
        <description>Reason why service is being requested</description>
        <label>Service Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__ServiceType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Downed Power Line</fullName>
                </value>
                <value>
                    <fullName>Life Support</fullName>
                </value>
                <value>
                    <fullName>Exposed Wiring</fullName>
                </value>
                <value>
                    <fullName>Damaged Transformer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Indoor Leak</fullName>
                </value>
                <value>
                    <fullName>Outdoor Leak</fullName>
                </value>
                <value>
                    <fullName>Solar Panel Installation</fullName>
                </value>
                <value>
                    <fullName>Energy Monitor Installation</fullName>
                </value>
                <value>
                    <fullName>Other Equipment Installation</fullName>
                </value>
                <value>
                    <fullName>Thermostat Installation</fullName>
                </value>
                <value>
                    <fullName>New Installation</fullName>
                </value>
                <value>
                    <fullName>Reading Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Dial Issue</fullName>
                </value>
                <value>
                    <fullName>Digital Readout Problem</fullName>
                </value>
                <value>
                    <fullName>Potential Meter Exchange</fullName>
                </value>
                <value>
                    <fullName>Faulty Meter</fullName>
                </value>
                <value>
                    <fullName>Regulatory Swap</fullName>
                </value>
                <value>
                    <fullName>Standards Measurement</fullName>
                </value>
                <value>
                    <fullName>Smart Meter</fullName>
                </value>
                <value>
                    <fullName>Move Meter Within Premises</fullName>
                </value>
                <value>
                    <fullName>Move Meter From Inside Out</fullName>
                </value>
                <value>
                    <fullName>Move Meter From Outside In</fullName>
                </value>
                <value>
                    <fullName>Move Meter Outside Premises</fullName>
                </value>
                <value>
                    <fullName>Meter Inside Home</fullName>
                </value>
                <value>
                    <fullName>Implausible Reading Check</fullName>
                </value>
                <value>
                    <fullName>Vacancy Reconnect</fullName>
                </value>
                <value>
                    <fullName>Non-Payment Reconnect</fullName>
                </value>
                <value>
                    <fullName>Seasonal Reconnect</fullName>
                </value>
                <value>
                    <fullName>Move Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceType__c</fullName>
        <description>Type of service being requested</description>
        <label>Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency Order</fullName>
                </value>
                <value>
                    <fullName>Gas Leakage Order</fullName>
                </value>
                <value>
                    <fullName>Installation Order</fullName>
                </value>
                <value>
                    <fullName>Investigate Service Order</fullName>
                </value>
                <value>
                    <fullName>Meter Exchange Order</fullName>
                </value>
                <value>
                    <fullName>Meter Movement Order</fullName>
                </value>
                <value>
                    <fullName>Reconnection Order</fullName>
                </value>
                <value>
                    <fullName>Turn Off Order</fullName>
                </value>
                <value>
                    <fullName>Turn On Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>